--- a/user_profile/templates/user_profile/user-profile.html
+++ b/user_profile/templates/user_profile/user-profile.html
@@ -79,7 +79,7 @@
                             <tr>
                                 <td>{% trans 'Реферальная ссылка (На fbt.world)' %}</td>
                                 <td>
-                                    <code class="ref-link">https://{{ request.META.HTTP_HOST }}{{ ref_link_home }}</a>
+                                    <code class="ref-link">https://{{ request.META.HTTP_HOST }}{{ ref_link_home }}</code>
                                     <button style="float: right;" class="js-textareacopybtn btn btn-info btn-sm">{% trans 'Скопировать ссылку' %}</button>
                                 </td>
                             </tr>
