Привелигиированые пользователи для регистряции

--- a/templates/landings/index.html
+++ b/templates/landings/index.html
@@ -117,7 +117,7 @@
                 В МИРЕ КРИПТОВАЛЮТ!
             </p>
             <div class="tokens__buttons">
-                <a class="custom__btn custom__btn-big">
+                <a class="custom__btn custom__btn-big" href="{% static '' %}footbikmlm/app/assets/Маркетинг_План_Footbik-MLM_compressed.pdf" target="_blank">
                      Маркетинг план
                 </a>
                 <a class="custom__btn custom__btn-big" target="_blank" href="{% static '' %}footbikmlm/app/assets/WP_RUS_19_Merg_compressed_V4.pdf">
@@ -359,7 +359,7 @@
                         <ul class="sell__list">
                             <li class="sell__list__item">
                                         <span>
-                                            В пакет входит 200 FBT (токенов)
+                                            В пакет входит 2000 FBT (токенов)
                                         </span>
                             </li>
                             <li class="sell__list__item">
@@ -453,7 +453,7 @@
                         <ul class="sell__list">
                             <li class="sell__list__item">
                                         <span>
-                                           В пакет входит 5000 FBT (токенов)
+                                           В пакет входит 50000 FBT (токенов)
                                         </span>
                             </li>
                             <li class="sell__list__item">
