Обновления команды проекта

--- a/templates/landings/index.html
+++ b/templates/landings/index.html
@@ -912,20 +912,19 @@
                 <!--team item 1 -->
 
                 <div class="team__big">
-                    <img src="{% static '' %}footbikmlm/app/img/4.jpg" class="team__avatar">
+                    <img src="{% static '' %}footbikmlm/app/img/foto_vr_big777.jpg" class="team__avatar">
                     <a class="linkedIn" href="https://www.linkedin.com/in/andrii-roienko-415428134/"
                        target="_blank">
                         <img src="{% static '' %}footbikmlm/app/img/linked.png">
                     </a>
                     <span class="team__name">
-                        Андрей Роенко
+                        Владимир Ярмоленко
                     </span>
                     <span class="team__position">
-                    Генеральный директор
+                        Founder
                     </span>
                     <p class="team__text">
-                        CEO и основатель проекта, предприниматель, специалист в области блокчейн технологий, бывший
-                        профессиональный футболист
+                        Учредитель проекта Footbik Network Int., а также проекта «Будущие звезды спорта»
                     </p>
                 </div>
 
@@ -950,20 +949,20 @@
                 <!--team item 2-->
                 <!--team item 3-->
                 <div class="team__big">
-                    <img src="{% static '' %}footbikmlm/app/img/11.png" class="team__avatar">
-                    <a class="linkedIn" href="https://www.linkedin.com/in/olena-zhigalina-675956168/"
+                    <img src="{% static '' %}footbikmlm/app/img/4.jpg" class="team__avatar">
+                    <a class="linkedIn" href="https://www.linkedin.com/in/andrii-roienko-415428134/"
                        target="_blank">
                         <img src="{% static '' %}footbikmlm/app/img/linked.png">
                     </a>
                     <span class="team__name">
-                      Елена Жигалина
+                        Андрей Роенко
                     </span>
                     <span class="team__position">
-                     Операционный директор
+                    Генеральный директор
                     </span>
                     <p class="team__text">
-                        Обеспечение надлежащего контроля за финансовыми целями и подготовкой бюджетов, управлением
-                        бизнес-логистикой и менеджмент сотрудников
+                        CEO и основатель проекта, предприниматель, специалист в области блокчейн технологий, бывший
+                        профессиональный футболист
                     </p>
                 </div>
                 <!--team item 3-->
@@ -1837,7 +1836,7 @@
     <p>Football Global Net PLC , регистрационный номер: 14523871, адрес: Harju maakond, Tallinn, Lasnamäe linnaosa,
     Peterburi tee 47, 11415</p><br>
     <p>
-        <a href="https://ariregister.rik.ee/ettevotja" target="_blank">Проверить компанию в реестре</a>
+        <a href="https://ariregister.rik.ee" target="_blank">Проверить компанию в реестре</a>
     </p>
 </div>
 <nav class="navigation" id="main__nav">
