--- a/templates/landings/index.html
+++ b/templates/landings/index.html
@@ -1273,7 +1273,7 @@
 
                             </div>
                             <div class="team__player__name">
-                                CEO
+                                Founder
                             </div>
                         </div>
                         <!--2-->
@@ -1291,7 +1291,7 @@
 
                             </div>
                             <div class="team__player__name">
-                                COO
+                                СEO
                             </div>
                         </div>
                         <!--4-->
