--- a/templates/cabinet.html
+++ b/templates/cabinet.html
@@ -11,7 +11,7 @@
     <meta name="description" content="">
     <meta name="author" content="vintkor">
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'adminbite' %}/assets/images/favicon.png">
-    <title>{% block page_title %}CryptoTrade{% endblock %}</title>
+    <title>{% block page_title %}Football Network{% endblock %}</title>
     <link href="{% static 'adminbite' %}/dist/css/style.min.css" rel="stylesheet">
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
