--- a/templates/cabinet_parts/_header.html
+++ b/templates/cabinet_parts/_header.html
@@ -7,7 +7,7 @@
             <a class="nav-toggler waves-effect waves-light d-block d-md-none" href="javascript:void(0)">
                 <i class="ti-menu ti-close"></i>
             </a>
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="{% url 'dashboard:dashboard' %}">
                 <b class="logo-icon">
                     <img src="{% static 'adminbite' %}/assets/images/logo-icon.png" alt="homepage" class="dark-logo" />
 
