--- a/user_profile/templates/user_profile/auth-base.html
+++ b/user_profile/templates/user_profile/auth-base.html
@@ -10,7 +10,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'adminbite' %}/assets/images/favicon.png">
-    <title>AdminBite admin Template - The Ultimate Multipurpose admin template</title>
+    <title>Football Network</title>
     <link href="{% static 'adminbite' %}/dist/css/style.min.css" rel="stylesheet">
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -44,7 +44,7 @@
                 <div>
                     <div class="logo">
                         <span class="db"><img src="{% static 'adminbite' %}/assets/images/logo-icon.png" alt="logo" /></span>
-                        <h5 class="font-medium m-b-20">Sign Up to Admin</h5>
+                        <h5 class="font-medium m-b-20">Sign Up to Football Network</h5>
                     </div>
                     <!-- Form -->
                     <div class="row">
